# ChangeLog for www-client/chromium
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.92 2010/04/29 10:48:09 phajdan.jr Exp $

  29 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-5.0.375.23.ebuild, chromium-9999.ebuild:
  Cleanup: better handling of -Werror and system zlib. Check success of
  setting CFLAGS in include.gypi.

*chromium-5.0.375.23 (28 Apr 2010)

  28 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  -chromium-5.0.371.0.ebuild, +chromium-5.0.375.23.ebuild:
  Version bump for dev channel release. Remove old.

  26 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +files/chromium-gcc45.patch, chromium-5.0.342.9.ebuild:
  GCC 4.5 patch for beta channel by truedfx in bug #317155

  20 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-5.0.375.9.ebuild, chromium-9999.ebuild:
  Add dev-lang/perl to DEPEND, just for correctness.

  19 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  chromium-5.0.375.9.ebuild, chromium-9999.ebuild:
  Add x11-themes/oxygen-molecule as a possible candidate to satisfy the icon
  theme dependency, bug #315689 by Nikoli <nikoli@lavabit.com>

*chromium-5.0.375.9 (19 Apr 2010)

  19 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +files/chromium-drop_sse2-r0.patch, -chromium-5.0.375.3.ebuild,
  +chromium-5.0.375.9.ebuild:
  Version bump for dev channel release. Should fix problems with H.264 codec
  support with system ffmpeg, bug #316029 by Daniel Faucon
  <koolfy@gmail.com>

  19 Apr 2010; Bernard Cafarelli <voyageur@gentoo.org>
  +files/chromium-drop_sse2-r1.patch, chromium-9999.ebuild:
  Update drop_sse2 patch, bug #315247

*chromium-5.0.375.3 (14 Apr 2010)

  14 Apr 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +chromium-5.0.375.3.ebuild, chromium-9999.ebuild,
  +files/chromium-supported-media-mime-types.patch:
  Version bump for dev channel release. Add USE flags for mp3 and x264